slight styling update

--- a/pokemon.html
+++ b/pokemon.html
@@ -1,11 +1,13 @@
 <html>
   <head>
     <title>Pokemon API Workshop</title>
+    <link rel="stylesheet" href="./pokemon.css">
     <script src="./pokemon.js" defer></script>
   </head>
   <body>
-    <ul></ul>
+    <ul id="pokemonContainer"></ul>
     <h2></h2>
     <section></section>
+    <ul id="stats"></ul>
   </body>
 </html>
