--- a/pokemon.html
+++ b/pokemon.html
@@ -6,8 +6,11 @@
   </head>
   <body>
     <ul id="pokemonContainer"></ul>
-    <h2></h2>
-    <section></section>
+    <h1 id="pokemon-name"></h1>
+    <h3 id="typing"></h3>
+    <section><img src="https://pm1.aminoapps.com/6508/dbd421799e1fc9118c02766e5c13836c87db6070_00.jpg"/></section>
+    <h2 id="BST"></h2>
+    <h3 id="BST-Number"></h3>
     <ul id="stats"></ul>
   </body>
 </html>
